Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9371

select insert('a',2,1,'b') doesn't return expected 'a'

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 5.3.13, 5.5(EOL), 10.0(EOL), 10.1(EOL)
    • 5.5.48
    • OTHER
    • 5.5.48-0

    Description

      Output:

      mysql> select insert('a',2,1,'b');
      +---------------------+
      | insert('a',2,1,'b') |
      +---------------------+
      | ab                  |
      +---------------------+
      1 row in set (0.00 sec)
       
      mysql> select version();
      +-----------------+
      | version()       |
      +-----------------+
      | 10.1.10-MariaDB |
      +-----------------+
      1 row in set (0.00 sec)

      Recreate:

      select insert('a',2,1,'b');

      Problem:
      ========
      'a' is expected.

      Attachments

        Activity

          People

            bar Alexander Barkov
            dylan Dylan Su
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: