MDEV-9371 select insert('a',2,1,'b') doesn't return expected 'a'